<resources>
    <string name="app_name">Beer List</string>
    <string name="show_beer_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_beer">Add a new beer</string>

    <string name="soon">BeerList will be there soon!</string>

    <!--AddBeer strings list-->
    <string name="beer_name">Name of the beer:</string>
    <string name="brewery_name">Name of the brewery:</string>
    <string name="alcohol_content">Alcohol content:</string>
    <string name="where_it_was_found">Where did you find the beer?</string>
    <string name="color">Beer\'s color:</string>
    <string name="price">Beer\'s price</string>
    <string name="save_beer_infos">Save Beer</string>
    <string name="beer_saved">The new beer was saved</string>

    <!--Exception handling-->
    <string name="beer_must_have_name">Beer must have a name</string>
    <string name="beer_already_in_db">The beer is already in the database or an insertion problem occurred</string>
    <string name="beer_price_problem">There is a problem with your beer\'s price</string>
    <string name="beer_updated">The beer was updated</string>
    <string name="beer_not_updated">No change where found</string>
    <string name="beer_deleted">The beer was deleted</string>
    <string name="beer_not_deleted">The beer was not deleted</string>

    <!--Show Beer strings list-->
    <string name="update_change">Save Changes</string>
    <string name="delete_beer">Delete Beer</string>

    <!--Navigation Drawer-->
    <string name="perfect_beer_companion">The perfect beer companion!</string>
    <string name="app_behaviour">Application\'s behaviour</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="beer_near_me">Good beers near me</string>
    <string name="title_activity_truc">truc</string>
</resources>
